--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  lms-mysql:
+  database:
     image: mysql:8
-    container_name: lms-mysql
+    container_name: database
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -13,20 +13,31 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
     healthcheck:
-    test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-    interval: 5s
-    retries: 5  
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      retries: 5
 
   backend:
     build: ./backend
-    container_name: elmondoproject
+    container_name: backend
     restart: always
     ports:
       - "4000:4000"
     env_file:
       - ./backend/.env
     depends_on:
-      - lms-mysql
+      database:
+        condition: service_healthy
+    command: npm run start:prod
+
+  frontend:
+    build: .
+    container_name: frontend
+    restart: always
+    ports:
+      - "5000:80"  # Flutter web served via Nginx
+    depends_on:
+      - backend
 
 volumes:
   mysql-data:
