--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,23 @@
-# Stage 1: Build Flutter web
-FROM cirrusci/flutter:stable AS build
+# Use official Node.js LTS image
+FROM node:20-alpine
 
-WORKDIR /app
+# Set working directory
+WORKDIR /usr/src/app
 
-# Copy pubspec first to leverage Docker cache
-COPY pubspec.* ./
-RUN flutter pub get
+# Copy package.json and package-lock.json first (for caching)
+COPY package*.json ./
 
-# Copy the rest of your code
-COPY . ./
+# Install dependencies
+RUN npm install --legacy-peer-deps
 
-# Build the web app
-RUN flutter build web --release
+# Copy the rest of the source code
+COPY . .
 
-# Stage 2: Serve with Nginx
-FROM nginx:alpine
+# Build the NestJS app
+RUN npm run build
 
-# Remove default nginx content
-RUN rm -rf /usr/share/nginx/html/*
+# Expose NestJS port
+EXPOSE 4000
 
-# Copy built web app from previous stage
-COPY --from=build /app/build/web /usr/share/nginx/html
-
-# Expose port 5000
-EXPOSE 5000
-
-CMD ["nginx", "-g", "daemon off;"]
+# Start in production mode
+CMD ["npm", "run", "start:prod"]
